--- a/src/main/docs/guide/gettingStarted.adoc
+++ b/src/main/docs/guide/gettingStarted.adoc
@@ -1,1 +1,1 @@
-In this guide we are going to create a Micronaut app written in Java.
+In this guide we are going to create a Micronaut application with https://www.graalvm.org/[Graal] support.
