--- a/src/main/docs/guide/writingTheApp.adoc
+++ b/src/main/docs/guide/writingTheApp.adoc
@@ -1,10 +1,10 @@
 Create an app using the Micronaut Command Line Interface.
 
-```
+[source, bash]
+----
 mn create-app example.micronaut.complete --features=graal-native-image
-```
+----
 
-The previous command creates a micronaut app with the default package `example.micronaut` in a folder named `complete`
-and with support for Graal.
+The previous command creates a micronaut app with the default package `example.micronaut` in a folder named `complete` and with support for Graal.
 
 include::{commondir}/common-annotationprocessors.adoc[]
