--- a/src/main/docs/guide/graal.adoc
+++ b/src/main/docs/guide/graal.adoc
@@ -3,8 +3,7 @@ https://www.graalvm.org[GraalVM] is a new universal virtual machine from Oracle 
 
 Any Micronaut application can be run using the GraalVM JVM, however special support has been added to Micronaut to
  support running Micronaut applications using
- https://www.graalvm.org/docs/reference-manual/aot-compilation/[GraalVM's `nativeimage` tool].
+ https://www.graalvm.org/docs/reference-manual/aot-compilation/[GraalVM's `native-image` tool].
 
-NOTE: Use of GraalVM's `nativeimage` tool is only supported in Java or Kotlin projects. Groovy relies heavily on
+NOTE: Use of GraalVM's `native-image` tool is only supported in Java or Kotlin projects. Groovy relies heavily on
 reflection which is only partially supported by GraalVM.
-
