--- a/src/main/docs/guide/service.adoc
+++ b/src/main/docs/guide/service.adoc
@@ -5,6 +5,9 @@ Create a POJO `Conference.java`:
 ----
 include::{sourceDir}/src/main/java/example/micronaut/Conference.java[]
 ----
+<1> Annotate the class with https://docs.micronaut.io/1.1.0.RC1/api/io/micronaut/core/annotation/Introspected.html[`@Introspected`]
+to generate `BeanIntrospection` metadata at compilation time. This information is use the render the POJO as json using Jackon
+without using reflection.
 
 Create a Service:
 
