--- a/src/main/docs/guide/graal/creatingGraalImage.adoc
+++ b/src/main/docs/guide/graal/creatingGraalImage.adoc
@@ -48,11 +48,11 @@ We can see that the application starts in only 12ms.
 
 To build your native image without using Docker you need to install GraalVM SDK via the https://www.graalvm.org/docs/getting-started/[Getting Started] instructions or using SDKman:
 
-.Installing GraalVM 19.2.1 with SDKman
+.Installing GraalVM 19.3.1 with SDKman
 [source,bash]
 ----
-$ sdk install java 19.2.1-grl
-$ sdk use java 19.2.1-grl
+$ sdk install java 19.3.1.r8-grl
+$ sdk use java 19.3.1.r8-grl
 ----
 
 The `native-image` tool was extracted from the base GraalVM distribution. Currently it is available as an early adopter plugin. To install it, run:
@@ -68,7 +68,7 @@ $ gu install native-image # <1>
 .Building Graal native image
 [source,bash]
 ----
-$ sdk use java 19.2.1-grl
+$ sdk use java 19.3.1.r8-grl
 $ ./gradlew assemble
 $ native-image --no-server -cp build/libs/complete-*-all.jar # <1>
 ----
