--- a/src/main/docs/guide/writingTheApp.adoc
+++ b/src/main/docs/guide/writingTheApp.adoc
@@ -2,7 +2,7 @@ Create an app using the Micronaut Command Line Interface.
 
 [source, bash]
 ----
-mn create-app example.micronaut.complete --features=graal-native-image
+mn create-app example.micronaut.complete --features=graalvm
 ----
 
 The previous command creates a Micronaut app with the default package `example.micronaut` in a folder named `complete` and with support for Graal.
