--- a/src/main/docs/guide/nextSteps.adoc
+++ b/src/main/docs/guide/nextSteps.adoc
@@ -1,1 +1,1 @@
-Read more about https://docs.micronaut.io/latest/guide/index.html#graal[Graal Support] inside Micronaut.
+Read more about https://docs.micronaut.io/latest/guide/index.html#graal[GraalVM Support] inside Micronaut.
