--- a/src/main/docs/guide/gettingStarted.adoc
+++ b/src/main/docs/guide/gettingStarted.adoc
@@ -1,1 +1,3 @@
+include::{commondir}/common-micronautonex.adoc[]
+
 In this guide we are going to create a Micronaut application with https://www.graalvm.org/[GraalVM] support.
