Update to Micronaut 2.0.0.RC1 (#18)
* Upgrade to Gradle 6.5

* Update 'initial' project

* Update 'complete' project

* Improve and adapt guide to Micronaut 2.0

* Use Micronaut 2.0.0.RC1

* doc: link to 1.x guide

--- a/src/main/docs/guide/gettingStarted.adoc
+++ b/src/main/docs/guide/gettingStarted.adoc
@@ -1,1 +1,3 @@
-In this guide we are going to create a Micronaut application with https://www.graalvm.org/[Graal] support.
+include::{commondir}/common-micronautonex.adoc[]
+
+In this guide we are going to create a Micronaut application with https://www.graalvm.org/[GraalVM] support.
