Upgrade to GraalVM 20.2.0

--- a/src/main/docs/guide/graal/creatingGraalImage.adoc
+++ b/src/main/docs/guide/graal/creatingGraalImage.adoc
@@ -48,11 +48,11 @@ We can see that the application starts in only 12ms.
 
 To build your native image without using Docker you need to install GraalVM SDK via the https://www.graalvm.org/docs/getting-started/[Getting Started] instructions or using SDKman:
 
-.Installing GraalVM 20.1.0 with SDKman
+.Installing GraalVM 20.2.0 with SDKman
 [source,bash]
 ----
-$ sdk install java 20.1.0.r8-grl
-$ sdk use java 20.1.0.r8-grl
+$ sdk install java 20.2.0.r8-grl
+$ sdk use java 20.2.0.r8-grl
 ----
 
 The `native-image` tool was extracted from the base GraalVM distribution. Currently it is available as an early adopter plugin. To install it, run:
@@ -68,9 +68,9 @@ $ gu install native-image # <1>
 .Building Graal native image
 [source,bash]
 ----
-$ sdk use java 20.1.0.r8-grl
+$ sdk use java 20.2.0.r8-grl
 $ ./gradlew assemble
-$ native-image --no-server -cp build/libs/complete-*-all.jar # <1>
+$ native-image -cp build/libs/complete-*-all.jar # <1>
 ----
 <1> Starting in Micronaut 1.1.0 it is really simple to create the native image.
 
