--- a/src/main/docs/guide/writingTheApp.adoc
+++ b/src/main/docs/guide/writingTheApp.adoc
@@ -2,8 +2,10 @@ Create an app using the Micronaut Command Line Interface.
 
 [source, bash]
 ----
-mn create-app example.micronaut.complete --features=graalvm
+mn create-app example.micronaut.complete
 ----
+
+NOTE: Starting with Micronaut 2.1.0, if you use Gradle you don't need to select the `graalvm` feature anymore.
 
 The previous command creates a Micronaut app with the default package `example.micronaut` in a folder named `complete` and with support for GraalVM.
 
